operator/pkg/model/ingestion/testdata/gateway/basic_inference_pool/input-gatewayclassconfig.yaml
kind: CiliumGatewayClassConfig
metadata:
  name: cilium-gateway-config
  namespace: default
spec:
  service:
    type: LoadBalancer
