operator/pkg/model/ingestion/testdata/gateway/basic_inference_pool/input-inferencepool.yaml
- metadata:
    name: my-inferencepool
  spec:
    selector:
      matchLabels:
        app: vllm-qwen3-32b
    targetPorts:
      - number: 8000
    endpointPickerRef:
      name: my-epp
      port:
        number: 9002
